@@ -1,50 +1,24 @@
-from copy import deepcopy
-from traceback import format_stack
 import logging
 
-from Acquisition import aq_parent
 from Products.Five.browser import BrowserView
 from ZTUtils import make_query
-from zope.component import queryUtility
 
 from Products.Archetypes.utils import OrderedDict
 from Products.CMFCore.utils import getToolByName
 from Products.CMFPlone.browser.navtree import getNavigationRoot
 from collective.solr.browser.facets import (
     SearchFacetsView, param)
-from collective.solr.interfaces import ISolrConnectionConfig
-from plone.memoize import instance
-from plone.registry.interfaces import IRegistry
-from zope.component import getUtility
-from zope.component.hooks import getSite
-from zope.component.hooks import setSite
 
 #from recensio.contenttypes.config import PORTAL_TYPES
-from recensio.policy.interfaces import IRecensioSettings
-from recensio.policy.utility import getSelectedQuery, \
+from recensio.policy.utility import \
     convertFacets, browsing_facets
+from recensio.theme.browser.views import CrossPlatformMixin
 
 log = logging.getLogger('recensio.theme/topical.py')
 PORTAL_TYPES = ['Review Journal', 'Review Monograph']
 
 
-class SwitchPortal(object):
-    def __init__(self, portal):
-        self.portal = portal
-
-    def __enter__(self):
-        self.original_portal = getSite()
-        setSite(self.portal)
-
-    def __exit__(self, type, value, traceback):
-        setSite(self.original_portal)
-        if value:
-            log.warn('Could not get portal url of ' + self.portal.id,
-                      exc_info=(type, value, traceback))
-            return True
-
-
-class BrowseTopicsView(SearchFacetsView):
+class BrowseTopicsView(SearchFacetsView, CrossPlatformMixin):
     """View for topical browsing (ddcPlace etc.)
     """
     show_if_empty = False
@@ -279,46 +253,3 @@ class BrowseTopicsView(SearchFacetsView):
         return not filter(lambda x: x.has_key('clearquery') or
                           self.expandSubmenu(x['submenu']), submenu) == [
 ]
-
-    def get_toggle_cross_portal_url(self):
-        new_form = self.request.form.copy()
-        new_form['use_navigation_root'] = not new_form.get('use_navigation_root', True)
-        return '?'.join((self.request['ACTUAL_URL'], make_query(new_form)))
-
-    @instance.memoize
-    def get_foreign_portal_url(self, portal_id):
-        other_portal = self.context.unrestrictedTraverse('/' + portal_id)
-        external_url = None
-        with SwitchPortal(other_portal):
-            registry = getUtility(IRegistry)
-            recensio_settings = registry.forInterface(IRecensioSettings)
-            external_url = recensio_settings.external_portal_url
-        return external_url
-
-    def get_foreign_url(self, result):
-        portal_id = result.getPath().split('/')[1]
-        other_portal = self.context.unrestrictedTraverse('/' + portal_id)
-        external_url = self.get_foreign_portal_url(portal_id)
-        if not external_url:
-            return result.getURL()
-        return result.getURL().replace(
-            other_portal.absolute_url(), external_url)
-
-    @instance.memoize
-    def get_all_portal_ids(self):
-        this_portal = getSite()
-        app = aq_parent(this_portal)
-        return app.objectIds('Plone Site')
-
-    def get_portal_link_snippet(self):
-        portal_ids = self.get_all_portal_ids()
-        link_tpl = '<a href="{1}">{0}</a>'
-        portal_infos = []
-        for portal_id in portal_ids:
-            portal_title = self.context.restrictedTraverse('/' + portal_id).Title()
-            portal_infos.append(
-                (portal_title, self.get_foreign_portal_url(portal_id)))
-        link_snippet = ', '.join([
-            link_tpl.format(*portal_info) for portal_info in portal_infos
-            if portal_info[1]])
-        return link_snippet
